# ComputerClubManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: test_input_1.txt
include/core/: computer_club_manager.h  computer_club_manager_impl.h
include/entities/: client.h  club_configuration.h  event.h  table.h  time.h
include/services/: client_repository.h  event_repository.h  table_repository.h
include/utils/: exceptions.h  file_parser.h  overloaded.h  result_printer.h
src/: main.cpp
src/core/: computer_club_manager_impl.cpp
src/entities/: client.cpp  club_configuration.cpp  event.cpp  table.cpp  time.cpp
src/services/: client_repository.cpp  event_repository.cpp  table_repository.cpp
src/utils/: exceptions.cpp  file_parser.cpp  result_printer.cpp
tests/: test_computer_club.cpp
tests/entities/: test_table.cpp  test_time.cpp
tests/services/: test_client_repository.cpp  test_table_repository.cpp
tests/utils/: test_file_parser.cpp
